Updated Server APIs and Database Design.
